站点顶部导航居中

--- a/base.less
+++ b/base.less
@@ -1283,9 +1283,11 @@ i.icon_logo_s {
     > li.nav_item {
       flex: none;
       font-weight: bold;
-      margin-right: 1rem;
+      width: 25%;
+      //margin-right: 0.8rem;
 
       > a {
+        width: 100%;
         height: 0.9rem;
         font-size: 0.3rem;
         color: #333;
@@ -1294,13 +1296,13 @@ i.icon_logo_s {
         align-items: center;
       }
 
-      &:nth-last-child(1) {
-        margin-right: 0;
-      }
+      //&:nth-last-child(1) {
+      //  margin-right: 0;
+      //}
 
-      &:nth-child(1) {
-        margin-left: 0.3rem;
-      }
+      //&:nth-child(1) {
+      //  margin-left: 0.3rem;
+      //}
 
       &.active {
         position: relative;
