--- a/base.css
+++ b/base.css
@@ -1089,21 +1089,16 @@ i.icon_logo_s {
 #web_top_nav > ul.nav_list > li.nav_item {
   flex: none;
   font-weight: bold;
-  margin-right: 1rem;
+  width: 25%;
 }
 #web_top_nav > ul.nav_list > li.nav_item > a {
+  width: 100%;
   height: 0.9rem;
   font-size: 0.3rem;
   color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-#web_top_nav > ul.nav_list > li.nav_item:nth-last-child(1) {
-  margin-right: 0;
-}
-#web_top_nav > ul.nav_list > li.nav_item:nth-child(1) {
-  margin-left: 0.3rem;
 }
 #web_top_nav > ul.nav_list > li.nav_item.active {
   position: relative;
